# weather-station-stm32

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  STM32F746NG_FLASH.ld  dep-arm-none-eabi-gcc.cmake  dep-drivers-stm32.cmake  dep-middleware.cmake  dep-toolchain-clang.cmake
.githooks/: commit-msg
.github/problem-matchers/: clang-tidy.json
.github/workflows/: ws-stm32-ci.yaml
CMake/: dep-arm-none-eabi-gcc.cmake  dep-drivers-stm32.cmake  dep-middleware.cmake  dep-tools-clang.cmake  dep-tools-ninja.cmake  dep-tools-toolchain.cmake
Config/: FreeRTOSConfig.h  SEGGER_RTT_Conf.h  app_config.hpp  misc_compiler.h  stm32f7xx_hal_conf.h
Core/: main.cpp
Core/App/: app_init.cpp  app_init.hpp
Core/App/InterTaskCom/: itc_manager.cpp  itc_manager.hpp
Core/App/Network/: network_task.cpp  network_task.hpp
Core/App/Network/Http/: http_client.cpp  http_client.hpp  http_response_parser.cpp  http_response_parser.hpp
Core/App/Network/HttpClient/: http_client.cpp  http_client.hpp
Core/App/Network/LwIP/: .clang-format  .clang-tidy  ethernetif.c  ethernetif.h  lwipopts.h  sys_arch.c
Core/App/Network/LwIP/BSP/: .clang-tidy  eth_phy_io.c  eth_phy_io.h  lan8742.c  lan8742.h
Core/App/Network/LwIP/arch/: cc.h  sys_arch.h
Core/App/Network/Transport/: tcp_transport.cpp  tcp_transport.hpp  transport.hpp
Core/App/Network/WeatherStationApi/: weather_station_api.cpp  weather_station_api.hpp  weather_station_endpoints.hpp
Core/App/Sensors/: sensors_task.cpp  sensors_task.hpp
Core/App/Sensors/bme280/: bme280_enumerations.hpp  bme280_it.cpp  bme280_sensor.cpp  bme280_sensor.hpp
Core/App/Sensors/ds18b20/: ds18b20.cpp  ds18b20.hpp  ds18b20_it.cpp
Core/App/Tasks/: generic_task.hpp
Core/Hardware/Inc/: .clang-format  hardware_config.h  stm32f7xx_it.h
Core/Hardware/Src/: hal_tick_tim.c  hardware_config.c  stm32f7xx_it.c  syscalls.c  system_stm32f7xx.c
Core/Startup/: startup_stm32f746xx.s
Core/Terminal/: terminal.c  terminal.h
Debug/: openocd.cfg
Drivers/: .clang-tidy
Middlewares/FreeRTOS-Kernel/portable/GCC/ARM_CM7_MPU/r0p1/: port.c
SeggerRTT/: SEGGER_RTT.c
